[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "default-hunter"
version = "1.2.3"
description = "A default credential scanner"
readme = "README.md"
authors = [
    {name = "ztgrace"}
]
requires-python = ">=3.10"
license = {text = "GPL3"}
dependencies = [
    "argcomplete",
    "cerberus",
    "jinja2",
    "logutils",
    "lxml",
    "netaddr",
    "paramiko",
    "psycopg2-binary",
    "pymongo",
    "pyodbc",
    "pysnmp>=7",
    "python-libnmap",
    "python-memcached",
    "pyyaml",
    "requests",
    "selenium",
    "shodan",
    "sqlalchemy",
    "tabulate",
    "telnetlib3>=2.0.8",
]

[project.optional-dependencies]
redis-scanning = [
    "redis",
]

[project.scripts]
default-hunter = "default_hunter.core:main"

[tool.setuptools.packages.find]
include = ["default_hunter*"]

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "responses>=0.25.0",
    "ruff>=0.15.11",
]

[tool.pytest.ini_options]
norecursedirs = "tests/shares"
filterwarnings = "ignore::DeprecationWarning"
minversion = "8.0"
addopts = "-ra -q"
pythonpath = "src tests"
testpaths = [
    "tests",
]
